--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="adjectives.js"></script>
 </head>
 <body>
-    <script src="script.js">
+    <script src="content_scripts.js">
 
 
     </script>
