--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-inline' 'unsafe-eval' https: http: data:;">
     <link rel="stylesheet" href="focus-mode.css">
     <script src="common_verbs.js"></script>
     <script src="common_nouns.js"></script>
